--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Простой конструктор сайтов</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Конструктор сайтов</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="app-container">
         <header class="toolbar">
-            <h1>Простой конструктор</h1>
+            <h1>Конструктор сайтов</h1>
             <div class="toolbar-actions">
                 <button id="save-btn"><i class="fas fa-save"></i> Сохранить</button>
                 <button id="preview-btn"><i class="fas fa-eye"></i> Превью</button>
                 <button id="publish-btn"><i class="fas fa-cloud-upload-alt"></i> Опубликовать</button>
+                <button id="undo-btn"><i class="fas fa-undo"></i></button>
+                <button id="redo-btn"><i class="fas fa-redo"></i></button>
             </div>
         </header>
         
@@ -56,7 +58,6 @@
         </div>
     </div>
     
-    <!-- Модальное окно для настроек -->
     <div class="modal" id="settings-modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
